[gd_scene load_steps=6 format=2]

[ext_resource path="res://_materiali/_zaloga_shaderjev/originali_uporabljanega/bolt_shield_texture.gdshader" type="Shader" id=1]
[ext_resource path="res://game/bolt/BoltAI.gd" type="Script" id=2]
[ext_resource path="res://game/bolt/Bolt.tscn" type="PackedScene" id=3]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/noise_intensity = 1.0
shader_param/noise_layers = 5
shader_param/noise_speed = 2.0
shader_param/inverse_output = false
shader_param/colorize = Color( 1, 1, 1, 1 )
shader_param/color_to_cut = Color( 1, 1, 1, 1 )
shader_param/color_intensity = 1.0
shader_param/texture_size = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=2]
radius = 128.0

[node name="BoltAI" instance=ExtResource( 3 )]
script = ExtResource( 2 )

[node name="Shield" parent="." index="6"]
material = SubResource( 1 )

[node name="DetectArea" type="Area2D" parent="." index="7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea" index="0"]
shape = SubResource( 2 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." index="8"]
target_desired_distance = 20.0

[node name="SeekRay" type="RayCast2D" parent="." index="9"]
enabled = true
cast_to = Vector2( 18, 0 )

[node name="VisionFront" type="RayCast2D" parent="." index="10"]
enabled = true
cast_to = Vector2( 100, 0 )

[node name="VisionRear" type="RayCast2D" parent="." index="11"]
visible = false
cast_to = Vector2( -50, 0 )
collide_with_areas = true

[node name="VisionLeft" type="RayCast2D" parent="." index="12"]
visible = false
cast_to = Vector2( 10, -40 )
collide_with_areas = true

[node name="VisionRight" type="RayCast2D" parent="." index="13"]
visible = false
cast_to = Vector2( 10, 40 )
collide_with_areas = true

[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_navigation_finished"]
[connection signal="path_changed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_path_changed"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_target_reached"]
